--- a/2nd Project/css/style.css
+++ b/2nd Project/css/style.css
@@ -116,7 +116,7 @@ html{
 
 .planet-container{
     position: relative;
-    height: 650px;
+    /* height: 650px; */
     /* margin-bottom: 46px; */
 }
 
@@ -125,10 +125,11 @@ html{
     position: absolute;
     top: 0px;
     left: 0px;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(0, 0, 0, 0.4);
     height: 100%;
     width: 100%;
     z-index: -1;
+    padding-bottom: 35px;
 }
 
 #planets{
@@ -166,14 +167,10 @@ html{
 
 /* Client Section  */
 
-#client-section{
-    height: 475px;
-}
 
 #client-section h1{
     padding-bottom: 40px;
-    position: relative;
-    top: 62px;
+    padding-top: 100px;
     font-family: 'Fira Sans', sans-serif;
 }
 
@@ -182,7 +179,7 @@ html{
     position: absolute;
     background: url("../bg2.jpg") no-repeat center center/cover;
     filter: brightness(0.4);
-    height: 475px;
+    height: 80%;
     width: 100%;
     z-index: -1;
     opacity: 0.8; 
@@ -193,8 +190,10 @@ html{
     align-items: center;
     justify-content: center;
     position: relative;
-    top: 80px;
-
+    /* margin-top: 100px; */
+    margin-bottom: 100px;
+    /* top: 80px; */
+    flex-wrap: wrap;
 }
 
 #clients img{
@@ -221,7 +220,7 @@ html{
     width: 100%;
     height: 100%;
     z-index: -1;
-    filter: brightness(0.5) opacity(0.8) blur(1px);
+    filter: brightness(0.5) contrast(0.7) saturate(0.8);
 }
 
 #contact h1{
@@ -277,15 +276,15 @@ footer{
 .btn {
     padding:  6px 20px;
     border: 2px solid rgb(71, 71, 71);
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255,0.3);
+    color: rgb(190, 190, 190);
     font-size: 1.5rem;
     border-radius: 10px;
     margin: 20px;
     cursor: pointer;
 }
 .btn:hover{
-    background-color: grey;
+    background-color: rgb(78, 78, 78);
     color: white;
 }
 
